# turbo_katana

./: .dockerignore  Dockerfile  Makefile  README.md  compil.opam  docker-compose.yml  dune-project  pack.txt
.github/workflows/: publish.yml
comp/: class.txt  ex1.txt  exprs.txt  gn.txt  grandMere.txt  helloworld.txt  list.txt  masking1.txt  math.txt  test.txt
doc/: contextual_checks.md
interprete/: Makefile  gram.c  gram.h  gram.y  interp  interp.c  interp.h  lex.c  lex.l
interprete/exemples/: 2+3  2+3.simple  addint  addint.simple  concat  dynlink  dynlink.simple  ex2CONCAT  exCONCAT  paires-entiers  paires-entiers.simple  subint  subint.simple
lib/: addrs.ml  ast.ml  astmanip.ml  compil.ml  contextual.ml  dune  env.ml  eval.ml  lexer.mll  misc.ml  optmanip.ml  parser.messages  parser.mly  print.ml  util.ml  vtable.ml
progs/: class.kat  class_prog.txt  err1.kat  err2.kat  err3.kat  err4.kat  errCast.kat  errCycle.kat  errResult.kat  ex1-V3.kat  ex1.kat  ex1.txt  ex1_ast.txt  ex1_prog.txt  exprs.kat  gn.kat  grandMere.kat  helloworld.kat  list.kat  masking1.kat  math.kat  test.kat  test1.txt
test/: compil.ml  context.ml  dune  exec.ml  lex.ml  parse.ml  test.ml  testLex.ml  utils.ml
