opam-version: "2.0"
name: "Katana"
version: "0.1"
synopsis: "The Katana Programming Language"
description: """
Longer description
"""
maintainer: "Brossier Mahmoud Surer"
authors: "Brossier Mahmoud Surer"
license: "MIT"
homepage: "https://github.com/k2d222/turbo_katana"
dev-repo: "git+https://github.com/k2d222/turbo_katana.git"
bug-reports: "https://github.com/k2d222/turbo_katana"

# PASTE ALL DEPS SO NO PROBLEM STUPID PACKAGE MANAGER

depends: [
        "base_bigstring"      
        "base_quickcheck"     
        "bin_prot"            
        "biniou"              
        "camomile"
        "charInfo_width"      
        "cmdliner"            
        "core"                
        "core_kernel"         
        "cppo"                
        "csexp"               
        "dot-merlin-reader"   
        "dune"                
        "dune-build-info"     
        "dune-configurator"   
        "easy-format"         
        "either"              
        "fieldslib"
        "fix"               
        "fpath"               
        "jane-street-headers" 
        "jst-config"          
        "lambda-term"         
        "lwt"                 
        "lwt_log"             
        "lwt_react"           
        "menhir"              
        "menhirLib"           
        "menhirSdk"           
        "merlin"              
        "mew"                 
        "mew_vi"              
        "mmap"                
        "num"                 
        "ocaml"               
        "ocaml-compiler-libs" 
        "ocaml-config"    
        "ocaml-version"       
        "ocamlbuild"          
        "ocamlfind"          
        "ocamlformat"         
        "ocamlformat-rpc"     
        "ocamlformat-rpc-lib" 
        "ocp-indent"          
        "ocplib-endian"       
        "octavius"            
        "odoc-parser"         
        "parsexp"             
        "pp"                  
        "ppx_assert"          
        "ppx_base"            
        "ppx_bench"           
        "ppx_bin_prot"        
        "ppx_cold"            
        "ppx_compare"         
        "ppx_custom_printf"   
        "ppx_derivers"        
        "ppx_deriving"        
        "ppx_enumerate"       
        "ppx_expect"          
        "ppx_fields_conv"     
        "ppx_fixed_literal"   
        "ppx_hash"            
        "ppx_here"            
        "ppx_inline_test"     
        "ppx_jane"            
        "ppx_js_style"        
        "ppx_let"             
        "ppx_module_timer"   
        "ppx_optcomp"         
        "ppx_optional"        
        "ppx_pipebang"        
        "ppx_sexp_conv"       
        "ppx_sexp_message"    
        "ppx_sexp_value"      
        "ppx_stable"          
        "ppx_string"          
        "ppx_typerep_conv"    
        "ppx_variants_conv"   
        "ppx_yojson_conv_lib" 
        "ppxlib"              
        "re"                  
        "react"               
        "result"              
        "seq"                 
        "sexplib"             
        "sexplib0"            
        "spawn"               
        "splittable_random"   
        "stdio"               
        "stdlib-shims"        
        "time_now"            
        "timezone"            
        "topkg"               
        "trie"                
        "typerep"             
        "uchar"               
        "user-setup"                
        "uucp"              
        "uuseg"               
        "uutf"                
        "variantslib"         
        "yojson"          
        "zed"
 ]
 
build: ["dune" "build"]