(library
  (name libcompil)
  (libraries core menhirLib)
  (preprocess (pps ppx_deriving.show))
  ; (preprocess (pps ppx_jane))
)

(menhir
  (modules parser)
  (flags --explain --dump --table))

(ocamllex lexer)

(env
 (dev
  ; -w -33: unused-open -27: unused-var-strict -39:
   (flags (:standard -warn-error -A))))

 (rule
   (targets parserMessages.ml)
   (deps parser.messages parser.mly)
   (action
     (with-stdout-to parserMessages.ml
       (run menhir
         %{dep:parser.mly}
         --compile-errors %{dep:parser.messages}))))

  (rule
    (targets parser.auto.messages)
    (deps parser.messages parser.mly)
    (action
      (with-stdout-to parser.auto.messages
        (run menhir
          %{dep:parser.mly}
          --list-errors))))

  (rule
    (targets parser.messages.check)
    (deps parser.messages parser.auto.messages parser.mly)
    (action
      (with-stdout-to parser.messages.check
        (run menhir
          %{dep:parser.mly}
          --compare-errors %{dep:parser.auto.messages}
          --compare-errors %{dep:parser.messages}))))
